arrumei ppos_disk

--- a/P13/Makefile
+++ b/P13/Makefile
@@ -2,7 +2,7 @@ CC     = gcc
 CFLAGS = -Wall
 CLIBS = -lrt
 
-PROG = pingpong-disco1 pingpong-disco2
+PROG = pingpong-disco1 pingpong-disco2 pingpong-disco-novo
 OBJS = disk.o ppos_disk.o ppos_core.o queue.o
 
 .PHONY: clean purge all
